# land_null

./: Makefile.am  configure.ac  land_model.F90  land_version.inc  soil.F90
t/: Makefile.am  land_model_init_test.f90  t001-land_model_init_test.sh
t/test_data/grids/CM2.1/: atmos_hgrid.cdl  atmos_mosaic.cdl  atmos_mosaicXland_mosaic.cdl  grid_spec.cdl  land_hgrid.cdl  land_mosaic.cdl  ocean_mosaic.cdl  topog.cdl
